<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mapFragment">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.osmtest.MapFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_mapFragment_to_busRoutesFragment"
            app:destination="@id/busRoutesFragment" />
        <argument
            android:name="busNumber"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_mapFragment_to_busStopsFragment"
            app:destination="@id/busStopsFragment" />
        <argument
            android:name="busStopId"
            android:defaultValue="-1L"
            app:argType="long" />
        <argument
            android:name="busStopLat"
            android:defaultValue="-1.0"
            app:argType="float" />
        <argument
            android:name="busStopLon"
            android:defaultValue="-1.0"
            app:argType="float" />
        <argument
            android:name="busStopName"
            android:defaultValue=" "
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/busRoutesFragment"
        android:name="com.example.osmtest.BusRoutesFragment"
        android:label="@string/bus_routes"
        tools:layout="@layout/fragment_bus_routes">
        <action
            android:id="@+id/action_busRoutesFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/busStopsFragment"
        android:name="com.example.osmtest.BusStopsFragment"
        android:label="@string/bus_stops"
        tools:layout="@layout/fragment_bus_stops">
        <action
            android:id="@+id/action_busStopsFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>
</navigation>