<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.osmtest.MapViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapFragment">

        <com.sothree.slidinguppanel.SlidingUpPanelLayout
            android:id="@+id/sliding_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:umanoDragView="@id/dragView"
            app:umanoScrollableView="@id/suggestions"
            android:gravity="bottom"
            app:umanoPanelHeight="48dp"
            app:umanoOverlay="false"
            app:umanoParallaxOffset="100dp"
            app:umanoShadowHeight="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <org.osmdroid.views.MapView
                    android:id="@+id/mapView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add"
                    app:layout_constraintBottom_toBottomOf="@+id/spinner"
                    app:layout_constraintStart_toStartOf="@+id/mapView"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/add_button"
                    app:layout_constraintTop_toTopOf="@+id/mapView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dragView"
                android:clickable="true"
                android:focusable="false"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <SearchView
                        android:id="@+id/search_from_destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:queryHint="@string/from_destination"
                        android:imeOptions="actionGo"
                        android:iconifiedByDefault="false"
                        android:focusedByDefault="false"/>

                    <SearchView
                        android:id="@+id/search_to_destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="16dp"
                        android:queryHint="@string/to_destination"
                        android:imeOptions="actionGo"
                        android:iconifiedByDefault="false"
                        android:focusedByDefault="false"
                        />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/suggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/close_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/baseline_close_18"/>

                    <TextView
                        android:id="@+id/place_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/navigate_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/navigate_button"/>

                </LinearLayout>

            </LinearLayout>

        </com.sothree.slidinguppanel.SlidingUpPanelLayout>

        <!--<com.sothree.slidinguppanel.SlidingUpPanelLayout
            android:id="@+id/sliding_panel2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:umanoDragView="@id/dragView2"
            android:gravity="bottom"
            app:umanoPanelHeight="68dp"
            app:umanoOverlay="false"
            app:umanoParallaxOffset="100dp"
            app:umanoShadowHeight="4dp"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/place_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/close_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/baseline_close_18"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/dragView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <Button
                    android:id="@+id/navigate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/navigate_button"/>

            </LinearLayout>

        </com.sothree.slidinguppanel.SlidingUpPanelLayout>-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/myLocation_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/mapView"
            app:layout_anchorGravity="center|end"
            android:src="@drawable/ic_menu_mylocation"
            android:layout_marginEnd="5dp"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>